Fix: update reviewer font weight for improved readability

--- a/src/pages/BookItemDetail/components/ReviewSection/ReviewSection.module.scss
+++ b/src/pages/BookItemDetail/components/ReviewSection/ReviewSection.module.scss
@@ -108,7 +108,7 @@
 }
 
 .reviewer {
-    font-weight: 100;
+    font-weight: 400;
     color: var(--text-color);
     margin-bottom: 2px;
     font-size: 1.4rem;
